code review comments

--- a/contact-us.html
+++ b/contact-us.html
@@ -1,40 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Ramita Blog : Contact US</title>
     <link rel="stylesheet" href="./css/style.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="wrapper">
-      <div class="box header">
-        <h1><a href="./index.html" tite="Home">My Blog</a></h1>
-        <div>
-          <a href="./contact-us.html" title="Contact US">Contact Us</a>
-          <a href="./subscribe.html" title="Subscribe">Subscribe</a>
+        <div class="box header">
+            <header>
+                <h1><a href="./index.html" tite="Home">Meditation Blog
+                    </a></h1>
+                <div>
+                    <a href="./contact-us.html" title="Contact US">Contact Us</a>
+                    <a href="./subscribe.html" title="Subscribe">Subscribe</a>
+                </div>
+            </header>
         </div>
-      </div>
-      <div class="box sidebar">
-        ul>
-        <li> <a href="./post.html" title="Mantra Meditation">Mantra Meditation</a></li>
-        <li> <a href="./post1.html" title="Jaap meditation">Jaap meditation</a></li>
-        <li> <a href="./post2.html" title="Moon meditation">Moon meditation</a></li>
-        <li> <a href="./post3.html" title="Sun meditation ">Sun meditation</a></li>
-        <li> <a href="./post4.html" title="Heart meditation">Heart Meditation</a></li>
-        <li> <a href="./post5.html" title="Sleep meditation">Sleep Meditation</a></li>
-        <li><a href="./post6.html" title="Kids meditation">Kids meditation</a></li>
-      </ul>      </div>
-      <div class="box">
-        <div class="contentBox">
-          <div class="content">
+        <div class="box sidebar">
+            <ul>
+                <li>
+                    <a href="./post.html" title="Mantra Meditation">Mantra Meditation</a>
+                </li>
+                <li>
+                    <a href="./post1.html" title="Jaap meditation">Jaap meditation</a>
+                </li>
+                <li>
+                    <a href="./post2.html" title="Moon meditation">Moon meditation</a>
+                </li>
+                <li>
+                    <a href="./post3.html" title="Sun meditation ">Sun meditation</a>
+                </li>
+                <li>
+                    <a href="./post4.html" title="Heart meditation">Heart Meditation</a>
+                </li>
+                <li>
+                    <a href="./post5.html" title="Sleep meditation">Sleep Meditation</a>
+                </li>
+                <li>
+                    <a href="./post6.html" title="Kids meditation">Kids meditation</a>
+                </li>
+            </ul>
+        </div>
+        <div class="box">
+            <div class="contentBox">
+                <div class="content">
+                    <div>
+                        <h1><u>Contact US</u></h1>
+                        <div>
+                            <form>
+                                <div>
+                                    <label>Name</label>
+                                    <input type="text" />
+                                </div>
 
-            <h1>Contact US</h1>
-          </div>
+                                <div>
+                                    <label>Comments</label>
+                                    <textarea></textarea>
+                                </div>
+                                <div>
+                                    <button type="submit">Submit</button>
+                                    <button>Reset</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="box footer">Footer</div>
+        <div class="box footer">Footer</div>
     </div>
-  </body>
+</body>
+
 </html>
