--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Meditation Blog</title>
   <link rel="stylesheet" href="./css/style.css" />
+
 </head>
 
 <body>
   <div class="wrapper">
     <div class="box header">
-      <div class="flex">
+      <header>
         <h1><a href="./index.html" tite="Home">Meditation Blog</a></h1>
-        <div class="flex-grow"></div>
-          <ul class="nav-ul">
-            <li><a href="#">Subscribe</a></li>
-            <li><a href="#">Contact us</a></li>
-          </ul>
-      </div>
+        <div>
+          <a href="./contact-us.html" title="Contact US">Contact Us</a>
+          <a href="./subscribe.html" title="Subscribe">Subscribe</a>
+        </div>
+      </header>
 
     </div>
     <div class="box sidebar">
@@ -42,7 +42,7 @@
         <div class="content">
           <div class="blog-box">
             <div>
-              <h1>Mantra Meditation</h1>
+              <h1><u>Mantra Meditation</u></h1>
             </div>
             <div class="img-box"><img src="./images/free-img.jpg" alt="small img" class="small-img" /></div>
             <div> This is my first article for my meditation blog.
