--- a/subscribe.html
+++ b/subscribe.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Ramita Blog : Subscribe</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <div class="box header">
-        <h1><a href="./index.html" tite="Home">My Blog</a></h1>
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Ramita Blog : Subscribe</title>
+  <link rel="stylesheet" href="./css/style.css" />
+
+</head>
+
+<body>
+  <div class="wrapper">
+    <div class="box header">
+      <header>
+        <h1><a href="./index.html" tite="Home">Meditation Blog </a></h1>
         <div>
           <a href="./contact-us.html" title="Contact US">Contact Us</a>
           <a href="./subscribe.html" title="Subscribe">Subscribe</a>
         </div>
-      </div>
-      <div class="box sidebar">
-        ul>
+      </header>
+
+    </div>
+    <div class="box sidebar">
+      <ul>
         <li> <a href="./post.html" title="Mantra Meditation">Mantra Meditation</a></li>
         <li> <a href="./post1.html" title="Jaap meditation">Jaap meditation</a></li>
         <li> <a href="./post2.html" title="Moon meditation">Moon meditation</a></li>
@@ -26,16 +31,36 @@
         <li> <a href="./post5.html" title="Sleep meditation">Sleep Meditation</a></li>
         <li><a href="./post6.html" title="Kids meditation">Kids meditation</a></li>
       </ul>
-      </div>
-      <div class="box">
-        <div class="contentBox">
-          <div class="content">
+    </div>
+    <div class="box">
+      <div class="contentBox">
+        <div class="content">
+          <div>
+            <h1><u>Subscribe US</u></h1>
+            <div>
+              <form>
+                <div>
+                  <label>Name</label>
+                  <input type="text" />
+                </div>
 
-            <h1>Subscribe US</h1>
+                <div>
+                  <label>Comments</label>
+                  <textarea></textarea>
+                </div>
+                <div>
+                  <button type="submit">Submit</button>
+                  <button>Reset</button>
+                </div>
+              </form>
+            </div>
           </div>
+
         </div>
       </div>
-      <div class="box footer">Footer</div>
     </div>
-  </body>
+    <div class="box footer">Footer</div>
+  </div>
+</body>
+
 </html>
