--- a/post1.html
+++ b/post1.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Meditation Blog : Post 2</title>
   <link rel="stylesheet" href="./css/style.css" />
+
 </head>
 
 <body>
@@ -41,20 +42,30 @@
 
             <article>
               <aside class="image">
-                <p><figure><img src="./images/jaap-img.jpg" alt="jaap img" class="small-img" />
+                <p>
+                <figure><img src="./images/jaap-img.jpg" alt="jaap img" class="small-img" />
                   <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
                 </figure>
 
                 </p>
               </aside>
               <section class="heading post-title">
-                <h1>Jaap Meditation</h1>
+                <h1><u>Jaap Meditation</u></h1>
               </section>
 
+              <blockquote>
+                <em><u>Lorem ipsum</u></em> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et
+                dolore magna aliqua. Viverra nam libero justo laoreet sit amet cursus sit. Quis blandit turpis cursus
+                in
+                hac habitasse platea dictumst quisque. Mi proin sed libero enim. Ut faucibus pulvinar elementum
+                integer
+              </blockquote>
               <section class="intro">
 
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  <em><u>Lorem ipsum</u></em> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                  incididunt ut labore et
                   dolore magna aliqua. Viverra nam libero justo laoreet sit amet cursus sit. Quis blandit turpis cursus
                   in
                   hac habitasse platea dictumst quisque. Mi proin sed libero enim. Ut faucibus pulvinar elementum
@@ -83,7 +94,8 @@
                   morbi
                   tristique senectus et netus et. Facilisis sed odio morbi quis commodo odio aenean sed adipiscing.
                 </p>
-                <p>Facilisis gravida neque convallis a cras semper auctor. Lorem ipsum dolor sit amet consectetur
+                <p>Facilisis gravida neque convallis a cras semper auctor. <em><u>Lorem ipsum</u></em> dolor sit amet
+                  consectetur
                   adipiscing elit pellentesque habitant. Consectetur lorem donec massa sapien faucibus et. Dolor sit
                   amet
                   consectetur adipiscing elit pellentesque habitant. Enim praesent elementum facilisis leo. Senectus et
@@ -102,57 +114,38 @@
           </div>
 
 
-          <!-- Share buttons https://www.addthis.com/examples/share-buttons/inline/ -->
-          <div class="addthis_inline_share_toolbox">
-            <div id="atstbx2"
-              class="at-resp-share-element at-style-responsive addthis-smartlayers addthis-animated at4-show"
-              aria-labelledby="at-8dd3089b-42ce-48be-9e1c-1a4ac74d579f" role="region">
-              <div class="at-share-btn-elements"><a role="button" tabindex="0"
-                  class="at-icon-wrapper at-share-btn at-svc-facebook"
-                  style="background-color: rgb(59, 89, 152); border-radius: 0px;"><span
-                    class="at4-visually-hidden">Share to Facebook</span><span class="at-icon-wrapper"
-                    style="line-height: 32px; height: 32px; width: 32px;"><svg xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" version="1.1" role="img"
-                      aria-labelledby="at-svg-facebook-5" class="at-icon at-icon-facebook"
-                      style="fill: rgb(255, 255, 255); width: 32px; height: 32px;">
-                      <title id="at-svg-facebook-5">Facebook</title>
-                      <g>
-                        <path
-                          d="M22 5.16c-.406-.054-1.806-.16-3.43-.16-3.4 0-5.733 1.825-5.733 5.17v2.882H9v3.913h3.837V27h4.604V16.965h3.823l.587-3.913h-4.41v-2.5c0-1.123.347-1.903 2.198-1.903H22V5.16z"
-                          fill-rule="evenodd"></path>
-                      </g>
-                    </svg></span><span class="at-label"
-                    style="font-size: 11.4px; line-height: 32px; height: 32px; color: rgb(255, 255, 255);">Facebook</span></a><a
-                  role="button" tabindex="0" class="at-icon-wrapper at-share-btn at-svc-twitter"
-                  style="background-color: rgb(29, 161, 242); border-radius: 0px;"><span
-                    class="at4-visually-hidden">Share to Twitter</span><span class="at-icon-wrapper"
-                    style="line-height: 32px; height: 32px; width: 32px;"><svg xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" version="1.1" role="img"
-                      aria-labelledby="at-svg-twitter-6" class="at-icon at-icon-twitter"
-                      style="fill: rgb(255, 255, 255); width: 32px; height: 32px;">
-                      <title id="at-svg-twitter-6">Twitter</title>
-                      <g>
-                        <path
-                          d="M27.996 10.116c-.81.36-1.68.602-2.592.71a4.526 4.526 0 0 0 1.984-2.496 9.037 9.037 0 0 1-2.866 1.095 4.513 4.513 0 0 0-7.69 4.116 12.81 12.81 0 0 1-9.3-4.715 4.49 4.49 0 0 0-.612 2.27 4.51 4.51 0 0 0 2.008 3.755 4.495 4.495 0 0 1-2.044-.564v.057a4.515 4.515 0 0 0 3.62 4.425 4.52 4.52 0 0 1-2.04.077 4.517 4.517 0 0 0 4.217 3.134 9.055 9.055 0 0 1-5.604 1.93A9.18 9.18 0 0 1 6 23.85a12.773 12.773 0 0 0 6.918 2.027c8.3 0 12.84-6.876 12.84-12.84 0-.195-.005-.39-.014-.583a9.172 9.172 0 0 0 2.252-2.336"
-                          fill-rule="evenodd"></path>
-                      </g>
-                    </svg></span><span class="at-label"
-                    style="font-size: 11.4px; line-height: 32px; height: 32px; color: rgb(255, 255, 255);">Twitter</span></a><a
-                  role="button" tabindex="0" class="at-icon-wrapper at-share-btn at-svc-print"
-                  style="background-color: rgb(115, 138, 141); border-radius: 0px;"><span
-                    class="at4-visually-hidden">Share to Print</span><span class="at-icon-wrapper"
-                    style="line-height: 32px; height: 32px; width: 32px;"><svg xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" version="1.1" role="img"
-                      aria-labelledby="at-svg-print-7" class="at-icon at-icon-print"
-                      style="fill: rgb(255, 255, 255); width: 32px; height: 32px;">
-                      <title id="at-svg-print-7">Print</title>
-                      <g>
-                        <path
-                          d="M24.67 10.62h-2.86V7.49H10.82v3.12H7.95c-.5 0-.9.4-.9.9v7.66h3.77v1.31L15 24.66h6.81v-5.44h3.77v-7.7c-.01-.5-.41-.9-.91-.9zM11.88 8.56h8.86v2.06h-8.86V8.56zm10.98 9.18h-1.05v-2.1h-1.06v7.96H16.4c-1.58 0-.82-3.74-.82-3.74s-3.65.89-3.69-.78v-3.43h-1.06v2.06H9.77v-3.58h13.09v3.61zm.75-4.91c-.4 0-.72-.32-.72-.72s.32-.72.72-.72c.4 0 .72.32.72.72s-.32.72-.72.72zm-4.12 2.96h-6.1v1.06h6.1v-1.06zm-6.11 3.15h6.1v-1.06h-6.1v1.06z">
-                        </path>
-                      </g>
-                    </svg></span><span class="at-label"
-                    style="font-size: 11.4px; line-height: 32px; height: 32px; color: rgb(255, 255, 255);">Print</span></a>
+          <div class="social-sharing facebook-box">
+            <div class="sharing-box">
+              <div>
+                Facebook
+              </div>
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32"
+                  version="1.1" role="img" aria-labelledby="at-svg-facebook-5" class="facebook">
+                  <title id="at-svg-facebook-5">Facebook</title>
+                  <g>
+                    <path
+                      d="M22 5.16c-.406-.054-1.806-.16-3.43-.16-3.4 0-5.733 1.825-5.733 5.17v2.882H9v3.913h3.837V27h4.604V16.965h3.823l.587-3.913h-4.41v-2.5c0-1.123.347-1.903 2.198-1.903H22V5.16z"
+                      fill-rule="evenodd"></path>
+                  </g>
+                </svg>
+              </div>
+            </div>
+
+            <div class="sharing-box twitter-box">
+              <div>
+                Twitter
+              </div>
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32"
+                  version="1.1" role="img" aria-labelledby="at-svg-twitter-6" class="twitter">
+                  <title id="at-svg-twitter-6">Twitter</title>
+                  <g>
+                    <path
+                      d="M27.996 10.116c-.81.36-1.68.602-2.592.71a4.526 4.526 0 0 0 1.984-2.496 9.037 9.037 0 0 1-2.866 1.095 4.513 4.513 0 0 0-7.69 4.116 12.81 12.81 0 0 1-9.3-4.715 4.49 4.49 0 0 0-.612 2.27 4.51 4.51 0 0 0 2.008 3.755 4.495 4.495 0 0 1-2.044-.564v.057a4.515 4.515 0 0 0 3.62 4.425 4.52 4.52 0 0 1-2.04.077 4.517 4.517 0 0 0 4.217 3.134 9.055 9.055 0 0 1-5.604 1.93A9.18 9.18 0 0 1 6 23.85a12.773 12.773 0 0 0 6.918 2.027c8.3 0 12.84-6.876 12.84-12.84 0-.195-.005-.39-.014-.583a9.172 9.172 0 0 0 2.252-2.336"
+                      fill-rule="evenodd"></path>
+                  </g>
+                </svg>
               </div>
             </div>
           </div>
@@ -162,10 +155,11 @@
             <div class="author-photo">
               <img src="./images/person.png" alt="person" />
             </div>
-            <div>author X</div>
+            <div><em>author X</em></div>
             <div>Test Developer</div>
             <div>xyz inc.</div>
-            <div><b>author x</b> is facilisis gravida neque convallis a cras semper auctor. Lorem ipsum dolor sit amet
+            <div><b><em>author X</em></b> is facilisis gravida neque convallis a cras semper auctor. <em><u>Lorem
+                  ipsum</u></em> dolor sit amet
               consectetur
               adipiscing elit pellentesque habitant. Consectetur lorem donec massa sapien faucibus et. Dolor sit amet
               consectetur adipiscing elit pellentesque habitant.</div>
