code review fixes

--- a/index.html
+++ b/index.html
@@ -37,119 +37,123 @@
 
       </ul>
     </div>
-    <div class="box inner-box">
-      <div class="contentBox">
-        <div class="content">
-          <div class="blog-box">
-            <div>
-              <h1><u>Mantra Meditation</u></h1>
-            </div>
-            <div class="img-box"><img src="./images/free-img.jpg" alt="small img" class="small-img" /></div>
-            <div> This is my first article for my meditation blog.
-            </div>
-            <div>
-              <a href="./post.html" title="Post 1">Read more..</a>
-            </div>
-          </div>
+    <div class="box contentBox inner-box">
 
-          <div class="blog-box">
-            <div>
-              <h1>Jaap meditation</h1>
-            </div>
-            <div class="img-box"><img src="./images/water-img.jpg" alt="small img" class="small-img" /></div>
-            <div>
-              This is my second article about jaap meditation.
-            </div>
-            <div>
-              <a href="./post1.html" title="Post 1">Read more..</a>
-            </div>
+      <div class="content">
+        <div class="blog-box">
+          <div>
+            <h1><u>Mantra Meditation</u></h1>
           </div>
-          <div class="blog-box">
-            <div>
-              <h1>Moon meditation</h1>
-            </div>
-            <div class="img-box"><img src="./images/moon-img.jpg" alt="small img" class="small-img" /></div>
-            <div>
-              This article is about meditating in moonlight
-            </div>
-            <div>
-              <a href="./post2.html" title="Post 1">Read more..</a>
-            </div>
+          <div class="img-box"><img src="./images/free-img.jpg" alt="small img" class="small-img" /></div>
+          <div> This is my first article for my meditation blog.
           </div>
-          <div class="blog-box">
-            <div>
-              <h1>Sun Meditation</h1>
-            </div>
-            <div class="img-box"><img src="./images/sun-img.jpg" alt="small img" class="small-img" /></div>
-            <div>
-              Learn a beautiful meditation in sunlight</div>
-            <div>
-              <a href="./post3.html" title="Post 1">Read more..</a>
-            </div>
+          <div>
+            <a href="./post.html" title="Post 1">Read more..</a>
           </div>
-          <div class="blog-box">
-            <div>
-              <h1>Heart Meditation</h1>
-            </div>
-            <div class="img-box"><img src="./images/heart-img.jpg" alt="small img" class="small-img" /></div>
-            <div>Listen to your heart and meditate in peace
-            </div>
-            <div>
-              <a href="./post4.html" title="Post 1">Read more..</a>
-            </div>
-          </div>
-          <div class="blog-box">
-            <div>
-              <h1>Sleep Meditation</h1>
-            </div>
-            <div class="img-box"><img src="./images/night-img.jpg" alt="small img" class="small-img" /></div>
-            <div> Sleep peacefully every night using this meditation
-            </div>
-            <div>
-              <a href="./post5.html" title="Post 1">Read more..</a>
-            </div>
-          </div>
-          <div class="blog-box">
-            <div>
-              <h1>Kids Meditation</h1>
-            </div>
-            <div class="img-box"><img src="./images/kids-img.jpg" alt="small img" class="small-img" /></div>
-            <div> Help kids be at peace with this meditation
-            </div>
-            <div>
-              <a href="./post6.html" title="Post 1">Read more..</a>
-            </div>
+        </div>
 
+        <div class="blog-box">
+          <div>
+            <h1>Jaap meditation</h1>
           </div>
-          <div class="blog-box">
-            <div>
-              <h1>Story Meditation</h1>
-            </div>
-            <div class="img-box"><img src="./images/story-img.jpg" alt="small img" class="small-img" /></div>
-            <div> kids can meditate with stories in this one
-            </div>
-            <div>
-              <a href="./post7.html" title="Post8">Read more..</a>
-            </div>
+          <div class="img-box"><img src="./images/water-img.jpg" alt="small img" class="small-img" /></div>
+          <div>
+            This is my second article about jaap meditation.
           </div>
-          <div class="blog-box">
-            <div>
-              <h1>Nature Meditation</h1>
-            </div>
-            <div class="img-box"><img src="./images/nature-img.jpg" alt="small img" class="small-img" /></div>
-            <div> Learn to meditate in the lap of nature
-            </div>
-            <div>
-              <a href="./post7.html" title="Post8">Read more..</a>
-            </div>
+          <div>
+            <a href="./post1.html" title="Post 1">Read more..</a>
           </div>
-
+        </div>
+        <div class="blog-box">
+          <div>
+            <h1>Moon meditation</h1>
+          </div>
+          <div class="img-box"><img src="./images/moon-img.jpg" alt="small img" class="small-img" /></div>
+          <div>
+            This article is about meditating in moonlight
+          </div>
+          <div>
+            <a href="./post2.html" title="Post 1">Read more..</a>
+          </div>
+        </div>
+        <div class="blog-box">
+          <div>
+            <h1>Sun Meditation</h1>
+          </div>
+          <div class="img-box"><img src="./images/sun-img.jpg" alt="small img" class="small-img" /></div>
+          <div>
+            Learn a beautiful meditation in sunlight</div>
+          <div>
+            <a href="./post3.html" title="Post 1">Read more..</a>
+          </div>
+        </div>
+        <div class="blog-box">
+          <div>
+            <h1>Heart Meditation</h1>
+          </div>
+          <div class="img-box"><img src="./images/heart-img.jpg" alt="small img" class="small-img" /></div>
+          <div>Listen to your heart and meditate in peace
+          </div>
+          <div>
+            <a href="./post4.html" title="Post 1">Read more..</a>
+          </div>
+        </div>
+        <div class="blog-box">
+          <div>
+            <h1>Sleep Meditation</h1>
+          </div>
+          <div class="img-box"><img src="./images/night-img.jpg" alt="small img" class="small-img" /></div>
+          <div> Sleep peacefully every night using this meditation
+          </div>
+          <div>
+            <a href="./post5.html" title="Post 1">Read more..</a>
+          </div>
+        </div>
+        <div class="blog-box">
+          <div>
+            <h1>Kids Meditation</h1>
+          </div>
+          <div class="img-box"><img src="./images/kids-img.jpg" alt="small img" class="small-img" /></div>
+          <div> Help kids be at peace with this meditation
+          </div>
+          <div>
+            <a href="./post6.html" title="Post 1">Read more..</a>
+          </div>
 
         </div>
+        <div class="blog-box">
+          <div>
+            <h1>Story Meditation</h1>
+          </div>
+          <div class="img-box"><img src="./images/story-img.jpg" alt="small img" class="small-img" /></div>
+          <div> kids can meditate with stories in this one
+          </div>
+          <div>
+            <a href="./post7.html" title="Post8">Read more..</a>
+          </div>
+        </div>
+        <div class="blog-box">
+          <div>
+            <h1>Nature Meditation</h1>
+          </div>
+          <div class="img-box"><img src="./images/nature-img.jpg" alt="small img" class="small-img" /></div>
+          <div> Learn to meditate in the lap of nature
+          </div>
+          <div>
+            <a href="./post7.html" title="Post8">Read more..</a>
+          </div>
+        </div>
+
+
       </div>
     </div>
-  </div>
-  <div class="box footer">Footer</div>
+    <div class="box footer">
+      <footer>
+        <div>
+          Footer
+        </div>
+      </footer>
+    </div>
   </div>
 </body>
 
