--- a/post2.html
+++ b/post2.html
@@ -35,143 +35,136 @@
 
       </ul>
     </div>
-    <div class="box">
-      <div class="contentBox">
-        <div class="content">
-          <div class="blog">
-            <article>
-              <aside class="image">
-                <p>
+    <div class="box body-box contentBox">
+      <div class="content">
+        <div class="blog">
+          <article>
+            <aside class="image">
+              <p>
                 <figure></figure><img src="./images/moonnew-img.jpg" alt="jaap img" class="small-img" />
                 <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
                 </figure>
 
 
-                </p>
-              </aside>
-              <section class="heading post-title">
-                <h1><u>Moon Meditation</u></h1>
-              </section>
+              </p>
+            </aside>
+            <section class="heading post-title">
+              <h1><u>Moon Meditation</u></h1>
+            </section>
 
-              <blockquote>
+            <blockquote>
+              <em><u>Lorem ipsum</u></em> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et
+              dolore magna aliqua. Viverra nam libero justo laoreet sit amet cursus sit. Quis blandit turpis cursus
+              in
+              hac habitasse platea dictumst quisque. Mi proin sed libero enim. Ut faucibus pulvinar elementum
+              integer
+            </blockquote>
+            <section class="intro">
+
+              <p>
                 <em><u>Lorem ipsum</u></em> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et
                 dolore magna aliqua. Viverra nam libero justo laoreet sit amet cursus sit. Quis blandit turpis cursus
                 in
                 hac habitasse platea dictumst quisque. Mi proin sed libero enim. Ut faucibus pulvinar elementum
                 integer
-              </blockquote>
-              <section class="intro">
-
-                <p>
-                  <em><u>Lorem ipsum</u></em> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                  incididunt ut labore et
-                  dolore magna aliqua. Viverra nam libero justo laoreet sit amet cursus sit. Quis blandit turpis cursus
-                  in
-                  hac habitasse platea dictumst quisque. Mi proin sed libero enim. Ut faucibus pulvinar elementum
-                  integer
-                  enim neque volutpat. Scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Iaculis
-                  eu
-                  non diam phasellus vestibulum lorem sed risus ultricies. Pellentesque sit amet porttitor eget dolor.
-                  Sodales neque sodales ut etiam sit. Lectus nulla at volutpat diam ut. Fames ac turpis egestas integer
-                  eget
-                  aliquet nibh praesent tristique. Turpis cursus in hac habitasse platea dictumst quisque.
-                </p>
-              </section>
-              <section class="content-section">
-                <p>Quisque egestas diam in arcu cursus euismod quis viverra nibh. Magna etiam tempor orci eu
-                  lobortis
-                  elementum. Eu consequat ac felis donec et odio pellentesque. Elementum nisi quis eleifend quam
-                  adipiscing
-                  vitae proin sagittis nisl. Est ante in nibh mauris cursus. Facilisis magna etiam tempor orci eu
-                  lobortis.
-                  Ut eu sem integer vitae justo eget magna. Purus viverra accumsan in nisl nisi scelerisque eu
-                  ultrices.
-                  Felis eget nunc lobortis mattis aliquam faucibus purus. Sed augue lacus viverra vitae. Suspendisse
-                  ultrices gravida dictum fusce ut. Morbi tristique senectus et netus et malesuada fames ac. In hac
-                  habitasse platea dictumst quisque. Id faucibus nisl tincidunt eget nullam non nisi est. In iaculis
-                  nunc
-                  sed augue lacus viverra vitae. Non curabitur gravida arcu ac tortor. Est placerat in egestas erat
-                  imperdiet. Nibh praesent tristique magna sit amet purus gravida. Vitae sapien pellentesque
-                  habitant
-                  morbi
-                  tristique senectus et netus et. Facilisis sed odio morbi quis commodo odio aenean sed adipiscing.
-                </p>
-              </section>
-            </article>
-          </div>
+                enim neque volutpat. Scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Iaculis
+                eu
+                non diam phasellus vestibulum lorem sed risus ultricies. Pellentesque sit amet porttitor eget dolor.
+                Sodales neque sodales ut etiam sit. Lectus nulla at volutpat diam ut. Fames ac turpis egestas integer
+                eget
+                aliquet nibh praesent tristique. Turpis cursus in hac habitasse platea dictumst quisque.
+              </p>
+            </section>
+            <section class="content-section">
+              <p>Quisque egestas diam in arcu cursus euismod quis viverra nibh. Magna etiam tempor orci eu
+                lobortis
+                elementum. Eu consequat ac felis donec et odio pellentesque. Elementum nisi quis eleifend quam
+                adipiscing
+                vitae proin sagittis nisl. Est ante in nibh mauris cursus. Facilisis magna etiam tempor orci eu
+                lobortis.
+                Ut eu sem integer vitae justo eget magna. Purus viverra accumsan in nisl nisi scelerisque eu
+                ultrices.
+                Felis eget nunc lobortis mattis aliquam faucibus purus. Sed augue lacus viverra vitae. Suspendisse
+                ultrices gravida dictum fusce ut. Morbi tristique senectus et netus et malesuada fames ac. In hac
+                habitasse platea dictumst quisque. Id faucibus nisl tincidunt eget nullam non nisi est. In iaculis
+                nunc
+                sed augue lacus viverra vitae. Non curabitur gravida arcu ac tortor. Est placerat in egestas erat
+                imperdiet. Nibh praesent tristique magna sit amet purus gravida. Vitae sapien pellentesque
+                habitant
+                morbi
+                tristique senectus et netus et. Facilisis sed odio morbi quis commodo odio aenean sed adipiscing.
+              </p>
+            </section>
+          </article>
+        </div>
 
 
-          <div class="social-sharing facebook-box">
-            <div class="sharing-box">
-              <div>
-                Facebook
-              </div>
-              <div>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32"
-                  version="1.1" role="img" aria-labelledby="at-svg-facebook-5" class="facebook">
-                  <title id="at-svg-facebook-5">Facebook</title>
-                  <g>
-                    <path
-                      d="M22 5.16c-.406-.054-1.806-.16-3.43-.16-3.4 0-5.733 1.825-5.733 5.17v2.882H9v3.913h3.837V27h4.604V16.965h3.823l.587-3.913h-4.41v-2.5c0-1.123.347-1.903 2.198-1.903H22V5.16z"
-                      fill-rule="evenodd"></path>
-                  </g>
-                </svg>
-              </div>
-            </div>
-
-            <div class="sharing-box twitter-box">
-              <div>
-                Twitter
-              </div>
-              <div>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32"
-                  version="1.1" role="img" aria-labelledby="at-svg-twitter-6" class="twitter">
-                  <title id="at-svg-twitter-6">Twitter</title>
-                  <g>
-                    <path
-                      d="M27.996 10.116c-.81.36-1.68.602-2.592.71a4.526 4.526 0 0 0 1.984-2.496 9.037 9.037 0 0 1-2.866 1.095 4.513 4.513 0 0 0-7.69 4.116 12.81 12.81 0 0 1-9.3-4.715 4.49 4.49 0 0 0-.612 2.27 4.51 4.51 0 0 0 2.008 3.755 4.495 4.495 0 0 1-2.044-.564v.057a4.515 4.515 0 0 0 3.62 4.425 4.52 4.52 0 0 1-2.04.077 4.517 4.517 0 0 0 4.217 3.134 9.055 9.055 0 0 1-5.604 1.93A9.18 9.18 0 0 1 6 23.85a12.773 12.773 0 0 0 6.918 2.027c8.3 0 12.84-6.876 12.84-12.84 0-.195-.005-.39-.014-.583a9.172 9.172 0 0 0 2.252-2.336"
-                      fill-rule="evenodd"></path>
-                  </g>
-                </svg>
-              </div>
-            </div>
-          </div>
-
-          <div class="about-author">
-            <h5>About Author</h5>
-            <div class="author-photo">
-              <img src="./images/person.png" alt="person" />
-            </div>
-            <div><em>author X</em></div>
-            <div>Test Developer</div>
-            <div>xyz inc.</div>
-            <div><b><em>author X</em></b> is facilisis gravida neque convallis a cras semper auctor. <em><u>Lorem
-                  ipsum</u></em> dolor sit amet
-              consectetur
-              adipiscing elit pellentesque habitant. Consectetur lorem donec massa sapien faucibus et. Dolor sit amet
-              consectetur adipiscing elit pellentesque habitant.</div>
+        <div class="social-sharing facebook-box">
+          <div class="sharing-box">
             <div>
+              Facebook
+            </div>
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32"
+                version="1.1" role="img" aria-labelledby="at-svg-facebook-5" class="facebook">
+                <title id="at-svg-facebook-5">Facebook</title>
+                <g>
+                  <path
+                    d="M22 5.16c-.406-.054-1.806-.16-3.43-.16-3.4 0-5.733 1.825-5.733 5.17v2.882H9v3.913h3.837V27h4.604V16.965h3.823l.587-3.913h-4.41v-2.5c0-1.123.347-1.903 2.198-1.903H22V5.16z"
+                    fill-rule="evenodd"></path>
+                </g>
+              </svg>
+            </div>
+          </div>
 
-
-
+          <div class="sharing-box twitter-box">
+            <div>
+              Twitter
+            </div>
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32"
+                version="1.1" role="img" aria-labelledby="at-svg-twitter-6" class="twitter">
+                <title id="at-svg-twitter-6">Twitter</title>
+                <g>
+                  <path
+                    d="M27.996 10.116c-.81.36-1.68.602-2.592.71a4.526 4.526 0 0 0 1.984-2.496 9.037 9.037 0 0 1-2.866 1.095 4.513 4.513 0 0 0-7.69 4.116 12.81 12.81 0 0 1-9.3-4.715 4.49 4.49 0 0 0-.612 2.27 4.51 4.51 0 0 0 2.008 3.755 4.495 4.495 0 0 1-2.044-.564v.057a4.515 4.515 0 0 0 3.62 4.425 4.52 4.52 0 0 1-2.04.077 4.517 4.517 0 0 0 4.217 3.134 9.055 9.055 0 0 1-5.604 1.93A9.18 9.18 0 0 1 6 23.85a12.773 12.773 0 0 0 6.918 2.027c8.3 0 12.84-6.876 12.84-12.84 0-.195-.005-.39-.014-.583a9.172 9.172 0 0 0 2.252-2.336"
+                    fill-rule="evenodd"></path>
+                </g>
+              </svg>
             </div>
           </div>
         </div>
-      </div>
-      <div class="box footer">
-        <footer>Footer</footer>
-      </div>
-    </div>
-</body>
 
-</html>
-</div>
-</div>
-</div>
-</div>
-<div class="box footer">Footer</div>
-</div>
+        <div class="about-author">
+          <h5>About Author</h5>
+          <div class="author-photo">
+            <img src="./images/person.png" alt="person" />
+          </div>
+          <div><em>author X</em></div>
+          <div>Test Developer</div>
+          <div>xyz inc.</div>
+          <div><b><em>author X</em></b> is facilisis gravida neque convallis a cras semper auctor. <em><u>Lorem
+                ipsum</u></em> dolor sit amet
+            consectetur
+            adipiscing elit pellentesque habitant. Consectetur lorem donec massa sapien faucibus et. Dolor sit amet
+            consectetur adipiscing elit pellentesque habitant.</div>
+          <div>
+
+
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="box footer">
+      <footer>
+        <div>Footer</div>
+      </footer>
+    </div>
+  </div>
 </body>
 
 </html>
